# backend

./: .flake8  .gitignore  README.md  SCHEMA.md
real-auth/: README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
real-auth/real_auth/: clients.py  dispatch.py  exceptions.py  handlers.py  xray.py
real-auth/tests/: test_dispatch.py
real-cloudfront/: package-lock.json  package.json  pyproject.toml  serverless.yml
real-cloudfront/edge_app/: handlers.py
real-lambda-layers/: Pipfile  package-lock.json  package.json  pyproject.toml  serverless.yml
real-main/: .env.production  .env.staging  .flake8  Pipfile  package-lock.json  package.json  pyproject.toml  pytest.ini  schema.graphql  serverless.yml
real-main/app/: logging.py
real-main/app/clients/: __init__.py  amplitude.py  (+23 more)
real-main/app_tests/: conftest.py
real-main/email_templates/: failed_appstore_subscription.html
real-main/mapping-templates/: Album.pipeline.ownedBy.request.vtl  Album.pipeline.ownedBy.response.vtl  Album.pipeline.ownedByBlockerStatus.request.vtl  Album.pipeline.ownedByBlockerStatus.response.vtl  Album.pipeline.ownedByFollowedStatus.request.vtl  Album.pipeline.ownedByFollowedStatus.response.vtl  Album.posts.request.vtl  Album.posts.response.vtl  Album.url.request.vtl  Album.url1080p.request.vtl  Album.url480p.request.vtl  Album.url4k.request.vtl  Album.url64p.request.vtl  Albums.batchGet.request.vtl  Albums.batchGet.response.vtl  Chat.messageCount.request.vtl  Chat.messages.request.vtl  Chat.messagesCount.request.vtl  Chat.messagesCount.response.vtl  Chat.messagesUnviewedCount.request.vtl  Chat.messagesUnviewedCount.response.vtl  Chat.users.request.vtl  Chat.users.response.vtl  ChatMemberships.batchGet.request.vtl  ChatMemberships.batchGet.response.vtl  ChatMessage.authorUserId.request.vtl  ChatMessage.viewedStatus.request.vtl  ChatMessage.viewedStatus.response.vtl  ChatMessages.batchGet.request.vtl  ChatMessages.batchGet.response.vtl  Chats.batchGet.request.vtl  Chats.batchGet.response.vtl  Comment.flagStatus.request.vtl  Comment.viewedStatus.request.vtl  Comment.viewedStatus.response.vtl  Comments.batchGet.request.vtl  Comments.batchGet.response.vtl  Comments.filterBy.viewedStatus.request.vtl  Comments.filterBy.viewedStatus.response.vtl  Generic.batchGetPosts.request.vtl  (+206 more)
real-main/migrations/: card_0_to_1.py  chat_0_0_fill_messages_count.py  chat_member_0_to_1_fill_in_unviewed_message_count.py  chat_view_0_2_add_gsiA1_gsiA2.py  comment_0_to_1.py  feed_0_to_1.py  feed_1_to_2.py  feed_2_0_drop_expires_at.py  feed_2_1_move_to_user_feed.py  feed_2_to_3.py  flag_0_to_1.py  flag_1_0_move_to_post_flag.py  followedFirstStory_0_to_1.py  following_0_to_1.py  like_0_to_1.py  like_1_0_drop_expires_at.py  like_1_1_move_to_post_like.py  media_object_0_0_generate_64p_thumbnail.py  media_object_0_1_fill_in_is_verified_true.py  media_object_0_2_drop_expires_at.py  media_object_0_3_fill_in_colors.py  media_object_0_to_1.py  media_object_1_to_2.py  media_object_2_0_move_checksum_to_post.py  media_object_2_1_drop_media_status.py  media_object_2_2_move_is_verified_to_post.py  media_object_2_3_move_to_post_image.py  post_0_to_1.py  post_1_0_delete_view_count.py  post_1_1_delete_view_count.py  post_1_to_2.py  post_2_0_fix_posts_in_albums.py  post_2_to_3.py  post_3_3_fill_in_payment_ticker.py  post_flag_0_0_change_gsi_k1_sort_key.py  post_trending_1_0_remove_private_posts.py  post_view_0_0_remove_post_owner_from_viewed_by.py  post_view_0_1_move_to_view.py  post_view_0_2_add_gsiA1_gsiA2.py  post_view_0_4_add_thumbnail_view_count.py  (+18 more)
real-main/migrations_tests/: conftest.py  table_schema.py  test_card_0_to_1.py  test_chat_view_0_2_add_gsiA1_gsiA2.py  test_comment_0_to_1.py  test_feed_2_to_3.py  test_flag_1_0_move_to_post_flag.py  test_followings_1_0_move_to_user_follower.py  test_media_object_0_to_1.py  test_media_object_1_to_2.py  test_media_object_2_0_move_checksum_to_post.py  test_media_object_2_2_move_is_verified_to_post.py  test_media_object_2_3_move_to_post_image.py  test_post_1_to_2.py  test_post_2_0_fix_posts_in_albums.py  test_post_2_to_3.py  test_post_3_1_fill_gsi_a3.py  test_post_3_3_fill_in_payment_ticker.py  test_post_flag_0_0_change_gsi_k1_sort_key.py  test_post_trending_0_1_remove_non_verified_non_original.py  test_post_view_0_0_remove_post_owner_from_viewed_by.py  test_post_view_0_1_move_to_view.py  test_post_view_0_2_add_gsiA1_gsiA2.py  test_post_view_0_4_add_thumbnail_view_count.py  test_trending_0_to_1_copy_to_new_trending.py  test_trending_1_0_delete_all.py  test_user_11_4_fill_in_user_status_and_gsi_k4.py  test_user_5_3_profile_photo_id_post_to_media.py  test_user_5_to_6.py  test_user_6_to_7.py  test_user_7_to_8_set_comment_count.py  test_user_8_to_9_load_pinpoint_endpoints.py  test_user_9_to_10_fill_requested_follower_count.py
real-main/serverless/: vars.js
(+642 files in other folders)
