[tool.poetry]
name = "real-lambda-layers"
version = "0.1.0"
description = ""
authors = ["Mike Fogel <mike@real.app>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
cryptography = "^2.8"
isodate = "^0.6.0"
requests-aws4auth = "^0.9"
pillow = "^7.0.0"
elasticsearch = "^7.5.1"
more-itertools = "^8.2.0"
pendulum = "^2.0.5"
colorthief = "^0.2.1"
gql-py = {git = "https://github.com/mfogel/gql_py.git", rev = "6ce3421"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
