[tool.poetry]
name = "real-main"
version = "0.1.0"
description = ""
authors = ["Mike Fogel <mike@real.app>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
boto3 = "^1.11.9"
pytest = "^5.3.5"
requests-mock = "^1.7.0"
cryptography = "^2.8"
requests-aws4auth = "^0.9"
pillow = "^7.0.0"
elasticsearch = "^7.5.1"
more-itertools = "^8.2.0"
moto = "1.3.15.dev289"
pendulum = "^2.0.5"
pytest-cov = "^2.8.1"
colorthief = "^0.2.1"
python-dotenv = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
